# MusicGateway

./: .gitignore  README.md  pyproject.toml
src/music_gateway/: emb_model.py  emotions.py  spec.py  utils.py  web.py
src/music_gateway/builder/: index_album.py  index_artist.py  index_music.py  utils.py  youtube.py
src/music_gateway/builder/scripts/: batch_build.py  build_graph_store.py  build_vec_store.py  cnt_output.py  create_space.ngql  down_album.py  down_artists.py  read_and_index.py  revise.py  revise_clean.py
src/music_gateway/retriever/: default.py  direct_text.py
